Fix a bug that was extending viewport in compare mode on mobile devices

--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -199,7 +199,7 @@
   position:absolute;
   top: 10.3em;
   bottom: 5em;
-  right: -50%;
+  right: 0;
   width: 100%;
   border-left: 1px solid white;
   .leaflet-control-attribution {
@@ -211,6 +211,10 @@
     display: none;
   }
   overflow: hidden;
+
+  .map-right {
+    width: 50%;
+  }
 } 
 .map-full.leaflet-fullscreen {
   .leaflet-bottom, .leaflet-right {
